Fix youtube embed layout issues

--- a/assets/scss/modules/_global.scss
+++ b/assets/scss/modules/_global.scss
@@ -187,6 +187,16 @@ pre:hover {
     color: $gray-darkest;
 }
 
+// Override youtube style injection
+.fluid-width-video-wrapper {
+    padding-top: 0 !important;
+
+    iframe {
+        position: relative !important;
+    }
+}
+
+
 iframe {
     width: 100%;
     min-height: 500px;
